First working color wheel with colour storage
